--- a/login.html
+++ b/login.html
@@ -188,7 +188,8 @@
                                     Ensure SMS Service is Active. Standard Charges will
                                                                                    apply
     </pre>
-    <button>Continue</button>
+    <a href="landing.html">
+    <button>Continue</button></a>
   </div>
 </div>
 
